# conflict-emissions-dashboard

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  DATA_LICENSE  HANDOFF.md  Justfile  LICENSE  README.md  alembic.ini  modal_app.py  pyproject.toml
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
.next/: trace  trace-build
.steering/: product.md  structure.md  tech.md
data/: emission_factors.yaml  parameter_distributions.yaml
data/facilities/: facilities.schema.json  iran_oil_gas.geojson
deploy/: Dockerfile.api  Dockerfile.pipeline  docker-compose.yml  prometheus.yml
deploy/grafana/: dashboards.yml  wced-dashboard.json
deploy/postgres-init/: 01-create-prefect-db.sql
docs/: DEV_SETUP.md  DIAGNOSIS_corroboration_gap.md  DIAGNOSIS_numbers_unchanged.md  GDELT_coverage_check.md  INCIDENT_RESPONSE.md  KNOWN_LIMITATIONS.md  LAUNCH_CHECKLIST.md  PROMPTS.md  RECOMPUTE_1.1.0_REPORT.md  RUNBOOK.md  V1_PLAN.md  V2_GAP_REPORT.md  WCED_execution_plan_v2.md
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/changelog/: page.tsx
frontend/app/map/: page.tsx
frontend/app/methodology/: page.tsx
frontend/app/revisions/: page.tsx
frontend/components/: ConfidenceBadge.tsx  CumulativeChart.tsx  DisclaimerModal.tsx  EmissionNumber.tsx  EmissionTimeline.tsx  EventMap.tsx  Footer.tsx  Header.tsx  HeadlineCard.tsx  MethodologyBanner.tsx  ProvenanceChain.tsx  RecentEventsList.tsx  Tooltip.tsx  UncertaintyBar.tsx
frontend/lib/: api.ts  constants.ts  format.ts
frontend/public/api-snapshot/: changelog.json  events.json  facilities.json  meta.json  snapshot.json
methodology/: CHANGELOG.md  README.md  v1.0.5.tex  v1.0.tex
scripts/: approve_top_events.sh  backfill_full_range.py  backfill_provenance.py  backfill_s2_chips.py  bootstrap_facilities.py  export_snapshot.py  extract_pdf_examples.py  launch_check.py  record_overview.py  screenshots.mjs  update_storage_assessments_v105.sh
tests/fixtures/: methodology_v1_0.json
tests/fixtures/cassettes/: acled_503_then_200.yaml  acled_empty_window.yaml  acled_events.yaml  firms_503_then_200.yaml  firms_empty_bbox.yaml  firms_viirs_isfahan.yaml  gdelt_doc_api_503_then_200.yaml  gdelt_doc_api_articles.yaml  gdelt_doc_api_empty.yaml
tests/fixtures/stac_items/: s2_high_cloud_item.json  s2_isfahan_item.json  s5p_no2_iran_item.json
tests/integration/db/: conftest.py  test_repositories.py
tests/methodology/: conftest.py  test_eq_3_3_frp_emissions.py  test_eq_3_4_inventory_emissions.py  test_eq_3_5_reconciliation.py  test_factors_match_pdf_table_2.py  test_priors_match_pdf_table_3.py
tests/unit/ai/: test_classify.py  test_claude_client.py
tests/unit/api/: conftest.py  test_aggregates.py  test_contract.py  test_events.py  test_facilities.py  test_meta.py  test_provenance_and_revisions.py  test_timeseries.py
tests/unit/categories/: test_oil_fuel_fire.py  test_registry.py
tests/unit/db/: test_publication_log.py  test_recompute_runs.py
tests/unit/detect/: test_baseline.py  test_facility_match.py  test_hotspot.py  test_persistence.py
tests/unit/ingest/: test_acled.py  test_firms.py  test_gdelt.py  test_sentinel2.py  test_sentinel5p.py  test_ucdp.py
tests/unit/models/: test_event.py  test_facility.py
tests/unit/pipeline/: conftest.py  test_daily_ingest.py  test_recompute.py  test_validation_weekly.py
tests/unit/provenance/: test_provenance.py
tests/unit/quantify/: test_aggregate.py  test_distribution.py  test_factors.py  test_frp.py  test_inventory.py  test_reconcile.py
wced/: logging.py  settings.py
wced/ai/: classify.py  claude_client.py
wced/api/: __init__.py  dependencies.py  main.py
wced/api/routes/: meta.py  (+7 more)
wced/categories/: __init__.py  base.py
wced/cli/: main.py  verify.py
wced/db/: models.py  session.py
wced/detect/: baseline.py  facility_match.py  hotspot.py  persistence.py
wced/ingest/: acled.py  base.py  firms.py  gdelt.py  sentinel2.py  sentinel5p.py  ucdp.py
wced/models/: assessment.py  editorial.py  event.py  facility.py  provenance.py
wced/pipeline/: daily_ingest.py  facility_repo.py  quantification.py  recompute.py  validation_weekly.py
wced/provenance/: store.py
wced/quantify/: aggregate.py  distribution.py  factors.py  frp.py  inventory.py  reconcile.py
wced/validate/: tropomi.py
wced/verify/: acled_corroboration.py  anomaly_watch.py  confidence.py  corroboration.py  editorial.py  sentinel2_check.py
(+257 files in other folders)
