[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wced"
version = "0.1.0"
description = "War Carbon Emissions Dashboard — near-real-time CO₂ quantification from oil/fuel infrastructure fires"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "fastapi>=0.111",
    "structlog>=24.0",
    "httpx>=0.27",
    "geopandas>=0.14",
    "rasterio>=1.3",
    "shapely>=2.0",
    "pystac-client>=0.8",
    "planetary-computer>=1.0",
    "anthropic>=0.28",
    "numpy>=1.26",
    "scipy>=1.13",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "prefect>=3.0",
    "xarray>=2024.1",
    "rioxarray>=0.15",
    "pyyaml>=6.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.100",
    "vcrpy>=6.0",
    "types-requests>=2.31",
]
api = [
    "uvicorn[standard]>=0.29",
]
ai = [
    "transformers>=4.41",
    "torch>=2.3",
]

[project.scripts]
wced = "wced.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["wced"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PT", "SIM", "TCH", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
# Strict mode on critical modules
[[tool.mypy.overrides]]
module = ["wced.quantify.*", "wced.provenance.*"]
strict = true
disallow_untyped_defs = true
disallow_any_generics = true
warn_unreachable = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=wced --cov-report=term-missing"

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:", "raise NotImplementedError"]
